--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TITLE</title>
+    <title>Planetoid</title>
     <style>
         html,
         body,
