feat: Add server module
- Add the server module to manage games

--- a/worker/src/main/resources/META-INF/resources/index.html
+++ b/worker/src/main/resources/META-INF/resources/index.html
@@ -119,17 +119,17 @@
         <h2>What is this page?</h2>
 
         <p>This page is served by Quarkus. The source is in
-            <code>src/main/resources/META-INF/resources/index.html</code>.</p>
+            <code>src/fr/resources/META-INF/resources/index.html</code>.</p>
 
         <h2>What are your next steps?</h2>
 
         <p>If not already done, run the application in <em>dev mode</em> using: <code>./mvnw compile quarkus:dev</code>.
         </p>
         <ul>
-            <li>Your static assets are located in <code>src/main/resources/META-INF/resources</code>.</li>
-            <li>Configure your application in <code>src/main/resources/application.properties</code>.</li>
+            <li>Your static assets are located in <code>src/fr/resources/META-INF/resources</code>.</li>
+            <li>Configure your application in <code>src/fr/resources/application.properties</code>.</li>
             <li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
-            <li>Play with the getting started example code located in <code>src/main/java</code>:</li>
+            <li>Play with the getting started example code located in <code>src/fr/java</code>:</li>
         </ul>
                 <div class="example-code">
             <h3>RESTEasy JAX-RS example</h3>
